--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 nav {
     background-color: #333;
     color: white;
-    width: 250px;
-    height: 100%;
+    width: 100%;
+    height: 55px;
     position: fixed;
     top: 0;
     left: 0;
@@ -17,6 +17,8 @@ nav {
 
 nav ul {
     list-style: none;
+    display: flex;
+    justify-content: space-around;
 }
 
 nav li {
@@ -34,6 +36,6 @@ nav a {
 }
 
 main {
-    margin-left: 250px;
+    margin-top: 55px;
     padding: 20px;
 }
